# jar-cmake-qt-linker-issues

./: CMakeLists.txt  LICENSE  TestLibrary1.cpp  TestLibrary1.hpp  main.cpp
